updated why line chart

--- a/week_06/Assignment/index.html
+++ b/week_06/Assignment/index.html
@@ -29,7 +29,7 @@
       </div>
       <div id="race">
         <h2>Victims by Race</h2>
-        <p>Line chart shows number of victims by race. In 2015, close to 800 white people were shot and close to 400 black people were shot.</p>
+        <p>Line charts are typically used for visualizing how one continuous variable, on the y-axis, changes in relation to the variable on the x-axis. Though often x variable represents time, it may also represent other categories. In our case here, line chart shows number of victims by race, with victim number on y axis and race on x axis. The steep drop of line also attracts readers' attention to big differences of number of victims among different races. Specifically, in 2015, close to 800 white people were shot and close to 400 black people were shot.</p>
       </div>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="bar.js"></script>
