--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -34,7 +34,7 @@
         </div>
 
         <div id="subcontainer2">
-            <h2 style="clear:left;">Nutrient Comparison with Industry Average - Total lipid (fat)</h2>
+            <h2 style="clear:left;">JBS Nutrient Comparison with Industry Average - Total lipid (fat)</h2>
             <p>
                 Within the 'Other Meats' food category, how is JBS’ nutrient compared to industry median? 
                 The left-hand-side boxplot showcases the <strong>total lipid (fat)</strong> value of JBS foods, while the right-hand-side showcases that of industry average.
@@ -46,7 +46,7 @@
         </div>
 
         <div id="chart" style="clear:left;">
-            <h2>Revenue vs. ESG Investment (2016-2020)</h2>
+            <h2>JBS Revenue vs. ESG Investment (2016-2020)</h2>
             <p>It is quite surprising that for Total lipid (fat), such a huge food processing company as JBS is performing less satisfactory than the industry average. Why is it the case? 
                 JBS’ social responsibility report shows that despite steady growth of revenue (million) from 2016 to 2020, the company’s investment in ESG (million) continued to drop. The opposite trends perfectly reveal company’s awareness of ESG importance and the extent to which they care about customers’ health and safety. 
                 Are we still confident to say food giants are more trust worthy? Probably our bodies are yearning for stricter regulations on food industry for safety and quality, especially on big giants which bring more impact to our daily life and are  assumed by a lot to be more trust worthy. Data Source:
