added article about data

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -24,7 +24,7 @@
 
             <div class = "flex-container">
                 <div class = "one">
-                    <h2>Only one company in food industry appears in top 30 'sustainably managed companies'</h2>
+                    <h2>WSJ's rating of top 30 'sustainably managed companies' only contains one company in food industry</h2>
                     <p>
                         This project zooms into food industry to examine whether the bigger firms perform better in ESG performance. 
                         Before diving into analysis, the first question is: Why food industry? 
@@ -52,8 +52,7 @@
 
             </div>
             <div id="subcontainer">
-                <h2>With JBS as target company, 'Other Meats' of 112.0 serving size stands out 
-                as important focus group for further analysis
+                <h2>Key focus group for further analysis - company: JBS; food category: 'Other Meats'; serving size: 112.0
                 </h2>
                     <p>
                         As a global leading food company with its headquarters in the United States, <strong>JBS Foods USA</strong> 
@@ -79,7 +78,7 @@
                     </p>
 
                 <div class="subcontainer" id="ring">
-                    <h3><center>Most Important Food Categories offered by JBS</center></h3>
+                    <h3><center>Distribution of Top JBS Food Categories</center></h3>
                 </div>
 
                 <div class="subcontainer" id="tree">
@@ -89,7 +88,7 @@
             </div>
 
             <div id="subcontainer2">
-                <h2 style="clear:left;">For a serving size around 112.0, JBS 'Other Meats' contain higher total lipid fat 
+                <h2 style="clear:left;">For a serving size of 112.0, JBS 'Other Meats' contains higher total lipid fat 
                     than industry average
                 </h2>
                 <p>
@@ -127,8 +126,12 @@
             </div>
 
             <div id="chart" style="clear:left;">
+                <p>
+                    <br>
+                    <br>
+                </p>
                 <h2>
-                    Despite continuous growth of revenue from 2016 to 2020, JBS continuously reduced investment in ESG 
+                    Despite steady growth of revenue from 2016 to 2020, JBS continuously reduced investment in ESG 
                 </h2>
                 <p>
                     Previous analysis reveals that JBS is performing less satisfactory than the industry average in terms of 
@@ -145,7 +148,7 @@
                     to care more about non-financial factors that are directly related to consumers' health and wellbeing.
                     <a href="https://api.mziq.com/mzfilemanager/v2/d/043a77e1-0127-4502-bc5b-21427b991b22/ae88aaaa-6925-b917-b021-7755ffd07729?origin=1">JBS Annual Sustainability Report</a>
                 </p>
-                
+
                 <h3><center>JBS Revenue vs. Investment in ESG</center></h3>
 
             </div>
@@ -161,6 +164,6 @@
     <script src="categorytree.js"></script>
     <script src="boxplot_jbs.js"></script>
     <script src="boxplot_ind.js"></script>
-</body>
 
+</body>
 </html>
