added article about data

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -40,8 +40,8 @@
                         <br>
                         <br>
                         Such a big contrast makes the food industry a great perspective to zoom into the topic: 
-                        How are big companies performing in terms of ESG? Besides, since the food industry impacts our daily lives, 
-                        it is also important to examine this industry and see how big companies' ESG performances are.
+                        How are big companies performing in terms of ESG? Besides, since the food industry directly impacts our daily lives, 
+                        it is also important to examine this industry while exploring the ESG topic.
                         <a href="https://www.wsj.com/articles/explore-the-full-wsj-sustainable-management-ranking-11602506733?mod=ig_sustainablymanagedcompanies2020">WSJ</a>
                     </p>
                 </div>
@@ -59,18 +59,18 @@
                         is selected for this project to examine how big companies such as JBS are performing in food safety and quality.
                         <br>
                         <br>
-                        While USDA offers massive data of a food company's food categories, product details, nutrient values, etc, 
-                        the huge data also poses a question: which one to start with and what to focus on? I did some data cleaning 
-                        with Python to make sure that the project puts key focus on the most essential / representative aspect. 
-                        Firstly, JBS offers a broad range of food categories. Out of all these categories, 'Other Meats' (incl. beef, etc.) claims 
-                        for 91% of the total counts (or 2119 out of 2340 total counts, as revealed in the ring plot below). 
+                        While USDA offers massive data of a food company's product categories, product details, nutrient values, etc, 
+                        the huge data also raise some questions: which aspect to start with and what to focus on? To address this, some cleaning 
+                        was done with Python to make sure that the project should focus on the most essential aspect. 
+                        Firstly, JBS offers a broad range of food categories. Out of all these categories, 'Other Meats' (incl. beef, etc.) accounts 
+                        for 91% of the total categories (or 2119 out of 2340 total counts, as revealed in the ring plot below). 
                         Other categories capture the remaining 9%, including Sausages, Hotdogs & Brats, Frozen Patties and Burgers, etc. 
                         Thus, 'Other Meats' is a key food category to further zoom into. 
                         <br>
                         <br>
                         The next thing that comes up is food serving size. Again, within the 'Other Meats' category, 
                         JBS offers a wide range of serving sizes, e.g. 112.0g, 151.0g, 170.0g, 227.0g, etc. As revealed in the tree plot below, 
-                        112.0 is the most frequent serving size, with a total count of 1768, which far exceeds the count of other serving sizes. 
+                        112.0 is the most important serving size, with a total count of 1768, which far exceeds the count of other serving sizes. 
                         Up to this point, the key focus group for study becomes clear with strong data support: 
                         <strong>112.0 serving size of 'Other Meats' food category, offered by JBS Foods</strong>.
 
@@ -138,12 +138,13 @@
                     'total lipid fat' of 'Other Meats' food category, despite being a giant within the industry. 
                     What might be the reasons behind this phenomenon? JBS' social responsibility report shows that 
                     despite steady growth of revenue from 2016 to 2020, the company's investment in ESG continued to drop. 
-                    The opposite trends perfectly reveal a company's attention to non-financial factors such as ESG and the 
+                    The opposite trends perfectly reveal a company's lack of attention to non-financial factors such as ESG and the 
                     extent to which they care about customers' health and safety. 
                     <br>
                     <br>
                     This concludes the main part of the project - 
-                    by focusing on the food industry and JBS Foods better performance in terms of food nutrient value than 
+                    by focusing on the food industry and JBS Foods specifically, this project reveals that industry giant does not have better 
+                    performance in terms of food nutrient value than 
                     industry average, which should raise our awareness and trigger thoughts on how we can force industry giants 
                     to care more about non-financial factors that are directly related to consumers' health and wellbeing.
                     <a href="https://api.mziq.com/mzfilemanager/v2/d/043a77e1-0127-4502-bc5b-21427b991b22/ae88aaaa-6925-b917-b021-7755ffd07729?origin=1">JBS Annual Sustainability Report</a>
