added code reference

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -213,6 +213,14 @@
             rating done by <a href="https://www.wsj.com/articles/explore-the-full-wsj-sustainable-management-ranking-11602506733?mod=ig_sustainablymanagedcompanies2020">WSJ</a>. 
         </p>
 
+        <h2>Code Reference</h2>
+        <p>
+            (i) <a href="https://d3-graph-gallery.com/">D3 graph library</a>  
+            (ii) <a href="https://github.com/tiffanyfrance/CAPP30239_FA22">Course GitHub repo</a>  
+            (iii) <a href="https://observablehq.com/@d3/bubble-chart">Observable circle packing bubble chart</a>  
+            (iv) <a href="https://observablehq.com/@d3/box-plot">Observable boxplot chart</a>
+        </p>
+
 
      </div>
 
