updated tree map

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -15,7 +15,7 @@
                 Introduction
             </h2>
             <p>
-                ESG stands for Environmental, Social and Governance. For a long time investors have paid huge attention only to 
+                ESG stands for Environmental, Social and Governance. For a long time investors have paid lots of attention only to 
                 financial factors of a company, i.e. revenue, net income, and CAGR. However, over the past few years non-financial 
                 factors have caught increasing attention to better identify risk and opportunities of a target company. 
                 Why are ESG factors important? Can we simply assume that those big companies (big in size and big in revenue) are 
@@ -146,7 +146,7 @@
                     by focusing on the food industry and JBS Foods specifically, this project reveals that industry giant does not have better 
                     performance in terms of food nutrient value than 
                     industry average, which should raise our awareness and trigger thoughts on how we can force industry giants 
-                    to care more about non-financial factors that are directly related to consumers' health and wellbeing.
+                    to care more about non-financial factors that are directly related to consumers' health and well-being.
                     <a href="https://api.mziq.com/mzfilemanager/v2/d/043a77e1-0127-4502-bc5b-21427b991b22/ae88aaaa-6925-b917-b021-7755ffd07729?origin=1">JBS Annual Sustainability Report</a>
                 </p>
 
