adjusted based on prof feedback

--- a/charts_final_project/index.html
+++ b/charts_final_project/index.html
@@ -15,7 +15,7 @@
                 Introduction
             </h2>
             <p>
-                ESG stands for Environmental, Social and Governance. For a long time investors have paid lots of attention only to 
+                ESG stands for Environmental, Social and Governance. For a long time investors have paid attention only to 
                 financial factors of a company, i.e. revenue, net income, and CAGR. However, over the past few years non-financial 
                 factors have caught increasing attention to better identify risk and opportunities of a target company. 
                 Why are ESG factors important? Can we simply assume that those big companies (big in size and big in revenue) are 
@@ -24,7 +24,7 @@
 
             <div class = "flex-container">
                 <div class = "one">
-                    <h2>WSJ's rating of top 30 'sustainably managed companies' only contains one company in food industry</h2>
+                    <h2>Only one company in food industry appears in WSJ's rating of top 30 'sustainably managed companies'</h2>
                     <p>
                         This project zooms into food industry to examine whether the bigger firms perform better in ESG performance. 
                         Before diving into analysis, the first question is: Why food industry? 
@@ -52,7 +52,7 @@
 
             </div>
             <div id="subcontainer">
-                <h2>Key focus group for further analysis - company: JBS; food category: 'Other Meats'; serving size: 112.0
+                <h2>'Other Meats' (serving size: 112.0) contributes the most to JBS revenue source and should be a key focus group for analysis
                 </h2>
                     <p>
                         As a global leading food company with its headquarters in the United States, <strong>JBS Foods USA</strong> 
@@ -68,7 +68,7 @@
                         Thus, 'Other Meats' is a key food category to further zoom into. 
                         <br>
                         <br>
-                        The next thing that comes up is food serving size. Again, within the 'Other Meats' category, 
+                        The next thing that comes up is food serving size. Within the 'Other Meats' category, 
                         JBS offers a wide range of serving sizes, e.g. 112.0g, 151.0g, 170.0g, 227.0g, etc. As revealed in the tree plot below, 
                         112.0 is the most important serving size, with a total count of 1768, which far exceeds the count of other serving sizes. 
                         Up to this point, the key focus group for study becomes clear with strong data support: 
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="subcontainer" id="tree">
-                    <h3><center>Detailed Food Categories and Serving Size</center></h3>
+                    <h3><center> Most Important Food Categories and Serving Size (based on number of counts)</center></h3>
                 </div>
                 
             </div>
@@ -110,14 +110,22 @@
                     <a href="https://fdc.nal.usda.gov/download-datasets.html">USDA</a>
                 </p>
 
+                <p>
+                    <center><u><em>
+                    Interpretation of boxplot: Each box shows the distribution (including minimum, Q1, median, Q3, maximum), of total lipid fat for that serving size.
+                    </em></u></center>
+                </p>
+
                 <div class = "subcontainer2" id="boxplot_jbs">
-                    <h3><center>Total Lipid (Fat) of 'Other Meats' Food Category - JBS Performance
+
+                    <h3><center>JBS' Total Lipid Fat of Different Serving Sizes
                         </center>
                     </h3>
+
                 </div>
 
                 <div class = "subcontainer2"id="boxplot_ind">
-                    <h3><center>Total Lipid (Fat) of 'Other Meats' Food Category - Industry Performance
+                    <h3><center>Industry's Total Lipid Fat of Different Serving Sizes
                     </center>
                     </h3>
 
@@ -131,7 +139,7 @@
                     <br>
                 </p>
                 <h2>
-                    Despite steady growth of revenue from 2016 to 2020, JBS continuously reduced investment in ESG 
+                    Despite steady revenue growth from 2016 to 2020, JBS continuously reduced investment in ESG, which reveals a lack of attention to non-financial factors 
                 </h2>
                 <p>
                     Previous analysis reveals that JBS is performing less satisfactory than the industry average in terms of 
@@ -150,7 +158,7 @@
                     <a href="https://api.mziq.com/mzfilemanager/v2/d/043a77e1-0127-4502-bc5b-21427b991b22/ae88aaaa-6925-b917-b021-7755ffd07729?origin=1">JBS Annual Sustainability Report</a>
                 </p>
 
-                <h3><center>JBS Revenue vs. Investment in ESG</center></h3>
+                <h3><center>Trend of JBS Revenue vs. Proportion of Revenue Invested in ESG, from 2016 to 2020</center></h3>
 
             </div>
         
